syntax = "proto3";

option java_multiple_files = true;
option java_package = "shopping.cart.proto";

import "google/protobuf/empty.proto";

package shoppingcart;

// gRPC definition for SimulatorService

service SimulatorService {
    rpc StartSimulators (StartSimulatorsRequest) returns (google.protobuf.Empty) {}
}

message StartSimulatorsRequest {
    int32 count = 1;
    int32 delayMillis = 2;
    int32 initialDelayMillis = 3;
}
